# cheops-api-generator

./: .gitignore  .hindent.yaml  .stylish-haskell.yaml  ChangeLog.md  README.md  config-generation-exe.prof  config-generation.cabal  overwritten.yaml  package.yaml  stack.yaml
app/: CLI.hs  CabalGen.hs  Main.hs  ProjectGen.hs
cbits/c_validate/: CMakeLists.txt  unsafe_validate.cpp  unsafe_validate.h
drafts/: BackendRep.hs  EventTaste.txt  FrontendRep.hs  InternalRep.hs  Lib.hs  Lib.hs.txt  Parsing.hs  Transformations.hs
file_templates/: package.yaml  stack.yaml
file_templates/test/test_prototypes/: Prototypes.hs
models/: brush.yaml  latex-request-object-inc.yaml  latex-request-object.yaml  ratio.yaml  some-array.yaml  string_array.yaml
python/JsonTest/: main.py
src/Data/ConfigGen/: Deriv.hs  JSTypes.hs  ModuleParts.hs  Parsing.hs  Traverse.hs  TypeRep.hs
src/Data/ConfigGen/JSTypes/: AOf.hs
src/Data/ConfigGen/Parsing/: IncludeInjection.hs  LCP.hs
src/Data/ConfigGen/Traverse/: Hylo.hs  LCP.hs  Utils.hs
src/Data/TransportTypes/: CodeGen.hs  Deriv.hs  FFI.hs  JSTypes.hs  ModuleParts.hs  Parsing.hs  TypeRep.hs  Utils.hs
src/Data/TransportTypes/CodeGen/: Hylo.hs  NamingUtils.hs  TestGen.hs  TypeGen.hs  Utils.hs
src/Data/TransportTypes/CodeGen/Hylo/: BreakDown.hs  BuildUp.hs  Internal.hs  Structure.hs
src/Data/TransportTypes/CodeGen/TypeGen/: InstanceGen.hs
src/Data/TransportTypes/Parsing/: IncludeInjection.hs  LCP.hs
test/: Generated.hs  Spec.hs
test/ffi/: FFI.hs
test/prototypes/: Prototypes.hs
(+3 files in other folders)
